# triangles-paper-wallet

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: offline-build.yml
src/: CMakeLists.txt  base58.c  base58.h  bip32.c  bip32.h  bip39.c  bip39.h  bip44.c  bip44.h  entropy.c  entropy.h  hmac_sha512.h  main.c  paper.c  paper.h  pbkdf2.c  pbkdf2.h  ripemd160.c  ripemd160.h  sha256.c  sha256.h  third_party_bip39_english.h  tri_sha512.c
tests/: CMakeLists.txt  bip32_selftest.c  bip44_canonical.c  e2e_test.c  roundtrip.c  selftest.c  test_helpers.c  test_helpers.h  test_vectors.h
